# Netflix-fastapi

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 456a4ed26f50_update_user_model.py  a4f0a37dc67f_init.py
src/: __init__.py
src/auth/: dao.py  dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  utils.py
src/auth/daos/: auth.py  token.py
src/config/: database.py  dependencies.py  logger.py  middleware.py  settings.py
src/core/: base.py  dao.py  exceptions.py  repository.py  service.py  utils.py
src/elastic/: router.py
src/minio/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py  utils.py
