[project]
name = "netflix-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=15.0.0",
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "elasticsearch>=9.0.2",
    "fastapi>=0.115.12",
    "ffmpeg-python>=0.2.0",
    "greenlet>=3.2.1",
    "loguru>=0.7.3",
    "passlib>=1.7.4",
    "pydantic-settings>=2.9.1",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "redis>=6.1.0",
    "ruff>=0.11.8",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.2",
]
